fix: spacing

--- a/resources/css/_code.scss
+++ b/resources/css/_code.scss
@@ -32,11 +32,17 @@ pre {
     }
 
     code.torchlight {
-        @apply block py-4 overflow-x-auto scrollbar:h-1 scrollbar-track:bg-gray-800 scrollbar-thumb:rounded scrollbar-thumb:bg-gray-500 hover:scrollbar-thumb:bg-gray-400;
+        @apply block py-4 pr-4 overflow-x-auto scrollbar:h-1 scrollbar-track:bg-gray-800 scrollbar-thumb:rounded scrollbar-thumb:bg-gray-500 hover:scrollbar-thumb:bg-gray-400;
     }
 
     code.torchlight .line {
-        @apply px-6;
+        &:before {
+            content: '  ';
+        }
+
+        &:after {
+            content: '  ';
+        }
     }
 
     code.torchlight .line-number, code.torchlight .summary-caret {
